[package]
name = "p2p_client"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "p2p_client"
path = "src/p2p_client.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "linker=clang-12"]
[dependencies]
